--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js",
-    "start": "node "
+    "start": "node --experimental-modules --es-module-specifier-resolution=node index.js"
   },
   "repository": {
     "type": "git",
