--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "v16.13.0"
+  },
   "bugs": {
     "url": "https://github.com/GraceChiamaka/todo-api/issues"
   },
