--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "coveralls": "^3.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^2.0.16",
+    "nyc": "^15.1.0",
     "pg": "^8.7.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./src/tests/*",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js",
     "start": "node --experimental-modules --es-module-specifier-resolution=node index.js"
   },
